popup html update

--- a/popup.html
+++ b/popup.html
@@ -93,7 +93,7 @@
             <br><br><hr>
             <p>🌐 <a href="https://www.sourcinno.com" target="_blank">sourcinno.com</a> - 📧 <a href="mailto:contact@sourcinno.com">contact@sourcinno.com</a></p>
             <p>Propriété exclusive de Sourcinno SAS - 2024.</p>
-            <!--url to Privacy Policy: chrome-extension://<your-extension-id>/privacy-policy.html-->
+            <!--url to Privacy Policy: https://ays-0908.github.io/aiforall_extension/privacy/privacy-policy.html-->
             <p><a href="privacy-policy.html" target="_blank">Politique de Confidentialité</a></p>
         </footer>
     </div>
