--- a/popup.html
+++ b/popup.html
@@ -14,14 +14,14 @@
             <details>
                 <summary>Guide d'utilisation</summary>
                 <div id="user-guide">
-                    <p style="color: grey;">Pour retirer la vraie valeur de l'IA il faut ◾ poser une <b>question structurée ('prompt')</b> et ◾ identifier l'<b>outil approprié</b>.</p>
-                    <p style = "color:grey;">Cette complexité est désormais <b>résolue</b> via des clics :</p>
+                    <p style="color: grey;">Pour tirer la valeur de l'IA (ex. ChatGpt) il faut ◾ structurer sa  <b>question ('prompt')</b> et ◾ choisir <b>l'IA appropriée</b>.</p>
+                    <p style = "color:grey;">Cette complexité est (enfin) <b>résolue</b> via des clics :</p>
                     <ul>
-                        <li style = "color:grey;">'prompt' rédigé tout seul</li>
-                        <li style = "color:grey;">pré-sélection de l'outil, copie du prompt et ouverture automatiques de l'outil
-                        <li style = "color:grey;">Vous avez juste à coller le prompt !</li>
+                        <li style = "color:grey;">'prompt' : rédigé tout seul</li>
+                        <li style = "color:grey;">choix d'IA : pré-sélectionné</li>
+                        <li style = "color:grey;">Il y a juste à valider et coller le prompt !</li>
                     </ul>
-                    <p style = "color:grey;">L'IA est enfin <b>dé-mo-cra-ti-sée</b> : 100% gratuit et 0% de vos données privées.</p>
+                    <p style = "color:grey;">☑️ IA <b>démocratisée</b> ☑️ 100% <b>gratuit</b> ☑️ 100% <b>données privées</b></p>
                 </div>
             </details>
         </section>
